Fixed overlapping of filter & sort buttons on mobile

--- a/src/app/component/results/filters/filters-shared.scss
+++ b/src/app/component/results/filters/filters-shared.scss
@@ -58,8 +58,8 @@
         }
 
         .mobile {
-            min-width: 210px;
-            max-width: 75%;
+            // min-width: 210px;
+            max-width: 95%;
         }
 
         h3 {
@@ -138,6 +138,7 @@
             }
 
             h3 {
+                font-size: 1.4rem;
                 padding: 9px 0px;
             }
             
